# ProspectFoldAdd

./: .env.example  .gitignore  PRD.md  README.md  index.html  intel-pipeline.jsx  main.jsx  package-lock.json  package.json  prospect-crafter.jsx  vite.config.js
electron/: main.cjs  preload.cjs
final-fold/: index.html  package-lock.json  package.json  vite.config.js
final-fold/prds/: PRD-FF-01-contact-bridge.md  PRD-FF-02-batch-export.md  PRD-FF-03-deal-prefill.md  PRD-FF-04-eventfold-receiving.md  PRD-FF-05-security-hardening.md  PRD-FF-06-llm-pipeline-reliability.md  PRD-FF-07-persistence-and-prospect-context.md  PRD-FF-08-ux-friction-reducers.md  PRD-FF-09-reliability-and-trust.md  PRD-FF-10-intel-feature-bridge.md
final-fold/src/: App.jsx
final-fold/src-tauri/: Cargo.toml  tauri.conf.json
final-fold/src-tauri/capabilities/: default.json
final-fold/src-tauri/src/: credentials.rs  generator.rs  github.rs  gmail.rs  lib.rs  main.rs  repos.rs  runs.rs
intel-pipeline/: .env.example  README.md  package-lock.json  package.json
intel-pipeline/app/: layout.tsx  page.tsx
intel-pipeline/components/: DraftModal.tsx  ProspectCard.tsx  ResearchProgress.tsx  UploadIntelPackage.tsx
intel-pipeline/lib/: apollo.ts  outreach.ts  parser.ts  researcher.ts  (+1 more)
prd/: 01-prospect-crafter-app.md  02-eventfold-apollo-autofill.md  03-prospect-pack-export.md
prds/: PRD-01-naics-intel-engine.md  PRD-02-eventfold-bridge.md  PRD-03-export.md  PRD-04-apollo-live-search.md  PRD-05-naics-selector-history.md  PRD-06-intelligence-upgrades.md  PRD-07-intel-package-company-pipeline.md
(+6 files in other folders)
